--- a/package.json
+++ b/package.json
@@ -14,13 +14,18 @@
     "@types/node": "^16.18.93",
     "@types/react": "^18.2.73",
     "@types/react-dom": "^18.2.23",
+    "axios": "^1.6.8",
     "flowbite-react": "^0.7.8",
+    "formik": "^2.4.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.30.2",
+    "slick-carousel": "^1.8.1",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^1.4.0"
   },
   "scripts": {
     "predeploy": "npm run build",
@@ -49,6 +54,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-slick": "^0.23.13",
     "gh-pages": "^6.1.1",
     "tailwindcss": "^3.4.3",
     "tailwindcss-bg-patterns": "^0.3.0"
